--- a/views/default/index.html
+++ b/views/default/index.html
@@ -8,7 +8,7 @@
     var edit_post_url = "{{=URL('api', 'edit_post', user_signature=True)}}";
 
     // Reply callbacks.
-    var add_reply_url = "{{=URL('api', 'add_reply', user_signature=True)}}";
+    var add_chore_url = "{{=URL('api', 'add_chore', user_signature=True)}}";
     var get_reply_list_url = "{{=URL('api', 'get_reply_list')}}";
     var edit_reply_url = "{{=URL('api', 'edit_reply', user_signature=True)}}";
 
