--- a/views/default/index.html
+++ b/views/default/index.html
@@ -27,6 +27,7 @@
     var is_logged_in = {{='false' if auth.user is None else 'true'}};
     
     var add_house_url = "{{=URL('api', 'add_house', user_signature=True)}}";
+    var get_house_url = "{{=URL('api', 'get_house')}}";
 </script>
 {{end}}
 
@@ -65,7 +66,7 @@
           </div>
       </div>
 
-      <button v-if="is_logged_in" v-show="!show_form" v-on:click="toggle_form">Add Post</button>
+      <button v-if="is_logged_in" v-show="!show_form" v-on:click="toggle_form">Add House</button>
 
 
 
