--- a/views/default/index.html
+++ b/views/default/index.html
@@ -27,6 +27,7 @@
     var is_logged_in = {{='false' if auth.user is None else 'true'}};
     
     var add_house_url = "{{=URL('api', 'add_house', user_signature=True)}}";
+    var add_hmember_url = "{{=URL('api', 'add_hmember', user_signature=True)}}";
 </script>
 {{end}}
 
