--- a/views/default/index.html
+++ b/views/default/index.html
@@ -28,6 +28,9 @@
     
     var add_house_url = "{{=URL('api', 'add_house', user_signature=True)}}";
     var get_chore_list_url = "{{=URL('api', 'get_chore_list')}}";
+    var get_house_url = "{{=URL('api', 'get_house')}}";
+    var add_chore_url = "{{=URL('api', 'add_chore', user_signature=True)}}";
+    var add_hmember_url = "{{=URL('api', 'add_hmember', user_signature=True)}}";
 </script>
 {{end}}
 
@@ -48,119 +51,169 @@
                 <input v-model="form_title" placeholder="Enter the house name"/>
               </div>
             </div>
+            <div class="container form_row"><div class="quarter"></div>
+              <div class="threequarters">
+                <div class="submit">
+                  <button id="add-house" v-on:click="add_house();toggle_form();get_house()">Submit</button>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <button v-if="is_logged_in&&house_list.length === 0" v-show="!show_form" v-on:click="toggle_form()">Add a new House</button>
+
+
+
+      <!-- Message in case there are no posts. -->
+
+
+      <div v-if="house_list.length === 0">You are not in a house. Please sign in to see if you are in one or make a new house</div>
+      <div class="house_div" v-for="house in house_list">
+          <div class="house_id">Welcome to the ${house.house_name} House!!!</div>
+      </div>
+      <div v-if="chore_list.length === 0 && house_list.length > 0">There's no chores. Add new chores. </div>
+
+      <div v-show="chore_form">
+          <div id="add_chore" style="">
             <div class="container form_row">
               <div class="label quarter">
                 Content:
               </div>
               <div class="form threequarters">
-                <textarea v-model="form_content" placeholder="Enter the content of your post"></textarea>
+                <input v-model="chore_form_content" placeholder="Enter a chore"/>
               </div>
-            </div> 
+            </div>
             <div class="container form_row"><div class="quarter"></div>
               <div class="threequarters">
                 <div class="submit">
-                  <button id="add-house" v-on:click="add_house(); toggle_form()">Submit</button>
+                  <button id="add-chore" v-on:click="add_chore();toggle_chore()">Submit</button>
                 </div>
               </div>
             </div>
           </div>
       </div>
+         <button v-if="is_logged_in&&house_list.length !== 0" v-show="!chore_form" v-on:click="toggle_chore()">Add Chore</button>
 
-      <button v-if="is_logged_in" v-show="!show_form" v-on:click="toggle_form">Add Post</button>
+         <div v-show="hmember_form">
+          <div id="add_hmember" style="">
+            <div class="container form_row">
+              <div class="label quarter">
+                Add User's email:
+              </div>
+              <div class="form threequarters">
+                <input v-model="hmember_form_content" placeholder="Enter a user's email"/>
+              </div>
+            </div>
+            <div class="container form_row"><div class="quarter"></div>
+              <div class="threequarters">
+                <div class="submit">
+                  <button id="add-hmember" v-on:click="add_hmember();toggle_hmember()">Submit</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+         <button v-if="is_logged_in&&house_list.length !== 0" v-show="!hmember_form" v-on:click="toggle_hmember()">Add House Member</button>
 
 
-
-      <!-- Message in case there are no posts. -->
-      <div v-if="post_list.length === 0">There are no posts.</div>
-
-
+         <div class="chore_div" v-for="chore in chore_list">
+            <div v-show="!chore.editing_chore">
+                <div class="chore_content">${chore.chore_content}</div>
+                <button v-if="chore.chore_author == current_user_email" v-on:click="">Edit Post</button>
+            </div>
+            <div v-show="chore.editing_chore">
+                <textarea v-model="chore.chore_content"></textarea>
+                <button v-if="chore.chore_author == current_user_email" v-on:click="">Submit</button>
+            </div>
+         </div>
 
       <!-- We display the posts. -->
-      <div id="post_list">
-        <div class="post_div" v-for="post in post_list">
-            <div v-show="!post.editing">
-                <div class="post_title">${post.post_title}</div>
-                <div class="post_content">${post.post_content}</div>
-                <button v-if="post.post_author == current_user_email" v-on:click="edit_post(post._idx)">Edit Post</button>
-            </div>
-            <div v-show="post.editing">
-                <textarea v-model="post.post_title"></textarea>
-                <textarea v-model="post.post_content"></textarea>
-                <button v-if="post.post_author == current_user_email" v-on:click="end_edit_post(post._idx)">Submit</button>
-            </div>
+      <!--<div id="post_list">-->
+        <!--<div class="post_div" v-for="post in post_list">-->
+            <!--<div v-show="!post.editing">-->
+                <!--<div class="post_title">${post.post_title}</div>-->
+                <!--<div class="post_content">${post.post_content}</div>-->
+                <!--<button v-if="post.post_author == current_user_email" v-on:click="edit_post(post._idx)">Edit Post</button>-->
+            <!--</div>-->
+            <!--<div v-show="post.editing">-->
+                <!--<textarea v-model="post.post_title"></textarea>-->
+                <!--<textarea v-model="post.post_content"></textarea>-->
+                <!--<button v-if="post.post_author == current_user_email" v-on:click="end_edit_post(post._idx)">Submit</button>-->
+            <!--</div>-->
 
-          <div class="attributes">
+          <!--&lt;!&ndash;<div class="attributes">&ndash;&gt;-->
 
-            <!-- Code for Thumbs. -->
-            <div class="thumbs">
-                <span v-if="is_logged_in" class="thumbs_up"
-                      v-on:mouseout="thumb_mouseout(post._idx)">
-                    <span v-on:mouseover="thumb_mouseover(post._idx, 'u')"
-                          v-on:click="thumb_click(post._idx, 'u')">
-                        <i v-if="post._current_thumb == 'u'" class="fa fa-thumbs-up" v-bind:class="{changed: post._current_thumb != post.thumb && post._current_thumb != 'd'}"></i>
-                        <i v-if="post._current_thumb != 'u'" class="fa fa-thumbs-o-up" v-bind:class="{changed: post._current_thumb != post.thumb && post._current_thumb == 'u'}"></i>
-                    </span>
-                </span>
-                <span v-if="is_logged_in" class="thumbs_down"
-                      v-on:mouseout="thumb_mouseout(post._idx)">
-                    <span v-on:mouseover="thumb_mouseover(post._idx, 'd')"
-                          v-on:click="thumb_click(post._idx, 'd')">
-                        <i v-if="post._current_thumb == 'd'" class="fa fa-thumbs-down" v-bind:class="{changed: post._current_thumb != post.thumb && post._current_thumb != 'u'}"></i>
-                        <i v-if="post._current_thumb != 'd'" class="fa fa-thumbs-o-down" v-bind:class="{changed: post._current_thumb != post.thumb && post._current_thumb == 'd'}"></i>
-                    </span>
-                </span>
-            </div>
-          </div>
+            <!--&lt;!&ndash;&lt;!&ndash; Code for Thumbs. &ndash;&gt;&ndash;&gt;-->
+            <!--&lt;!&ndash;<div class="thumbs">&ndash;&gt;-->
+                <!--&lt;!&ndash;<span v-if="is_logged_in" class="thumbs_up"&ndash;&gt;-->
+                      <!--&lt;!&ndash;v-on:mouseout="thumb_mouseout(post._idx)">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<span v-on:mouseover="thumb_mouseover(post._idx, 'u')"&ndash;&gt;-->
+                          <!--&lt;!&ndash;v-on:click="thumb_click(post._idx, 'u')">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<i v-if="post._current_thumb == 'u'" class="fa fa-thumbs-up" v-bind:class="{changed: post._current_thumb != post.thumb && post._current_thumb != 'd'}"></i>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<i v-if="post._current_thumb != 'u'" class="fa fa-thumbs-o-up" v-bind:class="{changed: post._current_thumb != post.thumb && post._current_thumb == 'u'}"></i>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</span>&ndash;&gt;-->
+                <!--&lt;!&ndash;</span>&ndash;&gt;-->
+                <!--&lt;!&ndash;<span v-if="is_logged_in" class="thumbs_down"&ndash;&gt;-->
+                      <!--&lt;!&ndash;v-on:mouseout="thumb_mouseout(post._idx)">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<span v-on:mouseover="thumb_mouseover(post._idx, 'd')"&ndash;&gt;-->
+                          <!--&lt;!&ndash;v-on:click="thumb_click(post._idx, 'd')">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<i v-if="post._current_thumb == 'd'" class="fa fa-thumbs-down" v-bind:class="{changed: post._current_thumb != post.thumb && post._current_thumb != 'u'}"></i>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<i v-if="post._current_thumb != 'd'" class="fa fa-thumbs-o-down" v-bind:class="{changed: post._current_thumb != post.thumb && post._current_thumb == 'd'}"></i>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</span>&ndash;&gt;-->
+                <!--&lt;!&ndash;</span>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+          <!--&lt;!&ndash;</div>&ndash;&gt;-->
 
-            <div v-show="!post.show_replies">
-                <button v-on:click="show_replies(post._idx)">Show Replies</button>
-            </div>
-            <div v-show="post.show_replies">
-                <button v-on:click="show_replies(post._idx)">Hide Replies</button>
+            <!--<div v-show="!post.show_replies">-->
+                <!--<button v-on:click="show_replies(post._idx)">Show Replies</button>-->
+            <!--</div>-->
+            <!--<div v-show="post.show_replies">-->
+                <!--<button v-on:click="show_replies(post._idx)">Hide Replies</button>-->
 
-              <div v-show="post.show_reply_form" id="add_reply">
-                <div class="container form_row">
-                  <div class="label quarter">
-                    Title:
-                  </div>
-                  <div class="form threequarters">
-                    <input v-model="reply_form_title" placeholder="Enter the reply title"/>
-                  </div>
-                </div>
-                <div class="container form_row">
-                  <div class="label quarter">
-                    Content:
-                  </div>
-                  <div class="form threequarters">
-                    <textarea v-model="reply_form_content" placeholder="Enter the content of your reply"></textarea>
-                  </div>
-                </div>
-                <div class="container form_row"><div class="quarter"></div>
-                  <div class="threequarters">
-                    <div class="submit">
-                      <button id="add-reply" v-on:click="add_reply(post._idx); show_reply_form(post._idx)">Submit Reply</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-                <button v-if="is_logged_in" v-show="!post.show_reply_form" v-on:click="show_reply_form(post._idx)">Add Reply</button>
+              <!--<div v-show="post.show_reply_form" id="add_reply">-->
+                <!--<div class="container form_row">-->
+                  <!--<div class="label quarter">-->
+                    <!--Title:-->
+                  <!--</div>-->
+                  <!--<div class="form threequarters">-->
+                    <!--<input v-model="reply_form_title" placeholder="Enter the reply title"/>-->
+                  <!--</div>-->
+                <!--</div>-->
+                <!--<div class="container form_row">-->
+                  <!--<div class="label quarter">-->
+                    <!--Content:-->
+                  <!--</div>-->
+                  <!--<div class="form threequarters">-->
+                    <!--<textarea v-model="reply_form_content" placeholder="Enter the content of your reply"></textarea>-->
+                  <!--</div>-->
+                <!--</div>-->
+                <!--<div class="container form_row"><div class="quarter"></div>-->
+                  <!--<div class="threequarters">-->
+                    <!--<div class="submit">-->
+                      <!--<button id="add-reply" v-on:click="add_reply(post._idx); show_reply_form(post._idx)">Submit Reply</button>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+                <!--<button v-if="is_logged_in" v-show="!post.show_reply_form" v-on:click="show_reply_form(post._idx)">Add Reply</button>-->
 
-                <div class="reply_div" v-for="reply in reply_list">
-                    <div v-show="!reply.editing_reply">
-                        <div class="reply_title">${reply.reply_title}</div>
-                        <div class="reply_content">${reply.reply_content}</div>
-                        <button v-if="reply.reply_author == current_user_email" v-on:click="edit_reply(reply._idx)">Edit Reply</button>
-                    </div>
-                    <div v-show="reply.editing_reply">
-                        <textarea v-model="reply.reply_title"></textarea>
-                        <textarea v-model="reply.reply_content"></textarea>
-                        <button v-if="reply.reply_author == current_user_email" v-on:click="end_edit_reply(reply._idx)">Submit</button>
-                    </div><br>
-                </div>
-            </div>
+                <!--<div class="reply_div" v-for="reply in reply_list">-->
+                    <!--<div v-show="!reply.editing_reply">-->
+                        <!--<div class="reply_title">${reply.reply_title}</div>-->
+                        <!--<div class="reply_content">${reply.reply_content}</div>-->
+                        <!--<button v-if="reply.reply_author == current_user_email" v-on:click="edit_reply(reply._idx)">Edit Reply</button>-->
+                    <!--</div>-->
+                    <!--<div v-show="reply.editing_reply">-->
+                        <!--<textarea v-model="reply.reply_title"></textarea>-->
+                        <!--<textarea v-model="reply.reply_content"></textarea>-->
+                        <!--<button v-if="reply.reply_author == current_user_email" v-on:click="end_edit_reply(reply._idx)">Submit</button>-->
+                    <!--</div><br>-->
+                <!--</div>-->
+            <!--</div>-->
 
-        </div>
-      </div>
+        <!--</div>-->
+      <!--</div>-->
 
     </div>
 
