Fixed showing house as soon a house is created

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -57,7 +57,7 @@
             <div class="container form_row"><div class="quarter"></div>
               <div class="threequarters">
                 <div class="submit">
-                  <button id="add-house" v-on:click="add_house();toggle_form();get_house()">Submit</button>
+                  <button id="add-house" v-on:click="add_house();toggle_form();">Submit</button>
                 </div>
               </div>
             </div>
