--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -57,10 +57,10 @@ header a{
     background-image: url(notepad.jpg);
     background-size: contain;
     background-repeat: no-repeat;
-    max-width: 60%;
+    max-width: 70%;
     margin-left: -3%;
     height:100%;
-    width: 50%  ;
+    width: 60%  ;
     overflow: hidden;
 }
 .add{
@@ -68,8 +68,7 @@ header a{
     margin-top: -12%;
     margin-left: 8%;
     width: 10%;
-    border-width: 2px;
-    border-style: outset;
+
 }
 .chore_content{
     padding-left:2%;
@@ -79,7 +78,7 @@ header a{
 }
 .chore_title{
     background-repeat: no-repeat;
-    margin-top: 9%;
+    margin-top: 13%;
     height:6vw;
     width: 45vw;
     margin-left: 23%;
@@ -90,7 +89,7 @@ header a{
 .add_chore{
     
     margin-top: 0%;
-    margin-left: 4%;
+    margin-left: 2%;
     height: 25.5vw;
     overflow-y: scroll;
     width: 93%;
@@ -101,16 +100,22 @@ header a{
     margin-top: 5%;
     float:right;
 }
+.members_list{
+    margin-top: 10%;
+    float:right;
+    margin-right:-10%;
+}
 .submit{
     font-size: 5%;
     margin-left:30%;
     margin-top: -2%;
 }
-.form{
-height:4vw;
+.cform{
+
+height:2vw;
 width:37vw;
-margin-top:-4%;
-margin-left:-1%;    
+margin-top:1%;
+margin-left:6%;    
 }
 
 .btn{
@@ -118,5 +123,8 @@ margin-left:-1%;
 }
 .edit{
     margin-right:3%;
+    float:right;
+}
+.members_list{
     float:right;
 }
