--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -70,7 +70,7 @@ header a{
     width: 10%;
 
 }
-.chore_content{
+.chore{
     padding-left:2%;
     padding-top:2%;
     font-size: 2.5vw;
@@ -95,6 +95,10 @@ header a{
     overflow-y: scroll;
     width: 93%;
  
+}
+.house{
+    background-image: url(house.png);
+    background-size: contain;
 }
 .add_member_button{
     
