--- a/views/default/index.html
+++ b/views/default/index.html
@@ -129,11 +129,11 @@
         <div v-if="chore_list.length === 0 && house_list.length > 0"> . . . </div>
         
          <div class="chore_div" v-for="chore in chore_list">
-            <div v-show="!chore.editing_chore">
-                <div class="chore_content">-${chore.chore_content}</div>
+            <div class="chore" v-show="!chore.editing_chore">
+                <div class="chore_content">&nbsp;${chore.chore_content}<i style ="margin-top:0%; float:right;border-width: 2px;border-style: outset;"class="fa fa-pencil" v-if="chore.chore_author == current_user_email" v-on:click="edit_chore(chore._idx)"></i></div>
                 <div class="chore_assigneduser">${chore.chore_assigneduser}</div>
                 <div class="chore_duedate">${chore.chore_duedate}</div>
-                <i style ="margin-top: -7%; float:right;border-width: 2px;border-style: outset;"class="fa fa-pencil" v-if="chore.chore_author == current_user_email" v-on:click="edit_chore(chore._idx)"></i>
+                
             </div>
             <div v-show="chore.editing_chore">
                 <textarea v-model="chore.chore_content" placeholder="Content:"></textarea>
