--- a/views/default/index.html
+++ b/views/default/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="members_list">
             <div class="hmember_div" v-for="hmember in hmember_list">
-            <div class="hmember_email">${hmember.hmember_email}            <i class="fa fa-remove" v-on:click="delete_hmember(hmember._idx)"></i>
+            <div class="hmember_email">${hmember.hmember_email}            <i style="float:right;"class="fa fa-remove" v-on:click="delete_hmember(hmember._idx)"></i>
             </div>
          </div>
         </div>
