--- a/views/default/index.html
+++ b/views/default/index.html
@@ -96,7 +96,7 @@
             <div class="container form_row"><div class="quarter"></div>
               <div class="threequarters">
                 <div class="submit">
-                  <button id="add-hmember" v-on:click="is_in_house()">Submit</button>
+                  <button id="add-hmember" v-on:click="toggle_hmember(); is_in_house()">Submit</button>
                 </div>
               </div>
             </div>
